BE/Aucation_chat/src/main/java/com/example/aucation_chat/common/error/MailSendFailException.java
package com.example.aucation_chat.common.error;

public class MailSendFailException extends ApplicationException {

    public MailSendFailException(ApplicationError applicationError) {
        super(applicationError);
    }
}
